{
  "sourceLanguage" : "en",
  "strings" : {
    "%@ Notes" : {
      "comment" : "A toolbar button that clears the drawing.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "ملاحظات %@"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "%@ Notas"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "%@ Notes"
          }
        },
        "he" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "הערות %@"
          }
        }
      }
    },
    "%lld / %lld Completed" : {
      "comment" : "A title that shows the number of completed tasks and the total number of tasks.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "تم إكمال %1$lld / %2$lld"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "new",
            "value" : "%1$lld / %2$lld Completed"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "%1$lld / %2$lld Completadas"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "%1$lld / %2$lld terminées"
          }
        },
        "he" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "%1$lld / %2$lld הושלמו"
          }
        }
      }
    },
    "Add Task" : {
      "comment" : "A button that adds a task to a task group.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "إضافة مهمة"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Agregar tarea"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Ajouter une tâche"
          }
        },
        "he" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "הוסף משימה"
          }
        }
      }
    },
    "Cancel" : {
      "comment" : "A button that dismisses the current view.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "إلغاء"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Cancelar"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Annuler"
          }
        },
        "he" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "ביטול"
          }
        }
      }
    },
    "Dark Mode" : {
      "comment" : "A label displayed in the footer of the app.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "الوضع الداكن"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Modo oscuro"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Mode sombre"
          }
        },
        "he" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "מצב כהה"
          }
        }
      }
    },
    "e.g. Work, School, Personal" : {
      "comment" : "A placeholder text for a text field.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "مثلاً: العمل، المدرسة، شخصي"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "p. ej. Trabajo, Escuela, Personal"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "p. ex. Travail, École, Personnel"
          }
        },
        "he" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "לדוגמה: עבודה, לימודים, אישי"
          }
        }
      }
    },
    "Group Name" : {
      "comment" : "A section for the name of a task group.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "اسم المجموعة"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Nombre del grupo"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Nom du groupe"
          }
        },
        "he" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "שם הקבוצה"
          }
        }
      }
    },
    "Home" : {
      "comment" : "The title of the home screen.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "الرئيسية"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Inicio"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Accueil"
          }
        },
        "he" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "בית"
          }
        }
      }
    },
    "Light Mode" : {
      "comment" : "A button that toggles between light and dark mode.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "الوضع الفاتح"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Modo claro"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Mode clair"
          }
        },
        "he" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "מצב בהיר"
          }
        }
      }
    },
    "New Group" : {
      "comment" : "A title for a view that allows the user to create a new task group.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "مجموعة جديدة"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Nuevo grupo"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Nouveau groupe"
          }
        },
        "he" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "קבוצה חדשה"
          }
        }
      }
    },
    "Notes" : {
      "comment" : "A button that opens a view for adding notes to a task group.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "ملاحظات"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Notas"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Notes"
          }
        },
        "he" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "הערות"
          }
        }
      }
    },
    "Save" : {
      "comment" : "A button that saves a new task group.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "حفظ"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Guardar"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Enregistrer"
          }
        },
        "he" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "שמור"
          }
        }
      }
    },
    "Select a Group" : {
      "comment" : "A placeholder text that appears when no task group is selected.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "اختر مجموعة"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Seleccionar un grupo"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Sélectionner un groupe"
          }
        },
        "he" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "בחר קבוצה"
          }
        }
      }
    },
    "Select Icon" : {
      "comment" : "A section that allows the user to select an icon for their new task group.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "اختر أيقونة"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Seleccionar ícono"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Sélectionner une icône"
          }
        },
        "he" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "בחר סמל"
          }
        }
      }
    },
    "Select your profile" : {
      "comment" : "A label displayed below the list of profiles.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "اختر ملفك الشخصي"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Selecciona tu perfil"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Sélectionnez votre profil"
          }
        },
        "he" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "בחר את הפרופיל שלך"
          }
        }
      }
    },
    "Task Progress" : {
      "comment" : "A heading for the task progress.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "تقدم المهام"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Progreso de tareas"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Progression des tâches"
          }
        },
        "he" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "התקדמות המשימות"
          }
        }
      }
    },
    "Task Title" : {
      "comment" : "A label for the title of a task.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "عنوان المهمة"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Título de la tarea"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Titre de la tâche"
          }
        },
        "he" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "כותרת המשימה"
          }
        }
      }
    },
    "Tasks" : {
      "comment" : "A label for the back button.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "المهام"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Tareas"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Tâches"
          }
        },
        "he" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "משימות"
          }
        }
      }
    },
    "Welcome Back to ToDo App" : {
      "comment" : "A welcome message displayed at the top of the dashboard.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "مرحبًا بعودتك إلى تطبيق ToDo"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Bienvenido de nuevo a ToDo App"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Bienvenue à nouveau dans ToDo App"
          }
        },
        "he" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "ברוכים השבים לאפליקציית ToDo"
          }
        }
      }
    }
  },
  "version" : "1.2"
}