...
    var body: some View {
        NavigationStack {
            Form {
                // SECTION 1 : NAME OF THE GROUP
                Section("Group Name"){
                    TextField("e.g. Work, School, Personal", text: $groupName)
                        .accessibilityIdentifier("group_name_field")
                }
                
                // SECTION 2 : ICON
                Section("Select Icon"){
                    LazyVGrid(columns: [GridItem(.adaptive(minimum: 40))]){
                        ForEach(icons, id: \.self) { icon in
...
                ToolbarItem(placement: .confirmationAction) {
                    Button("Save") {
                        let newGroup = TaskGroup(title: groupName, symbolName: selectedIcon, tasks: [])
                        onSave(newGroup)
                        dismiss()
                    }
                    .accessibilityIdentifier("save_button")
                    .disabled(groupName.isEmpty) // disable save button if group name is empty
                }
            }
        }
    }
}
...
