...
                ToolbarItem(placement: .topBarTrailing) {
                    Button{
                        isShowingAddGroup = true
                    } label: {
                        Image(systemName: "plus")
                    }
                    .accessibilityIdentifier("add_group_button")
                }
            }
            
            Divider()
                .overlay( isDarkMode ? .white : .gray)
                .padding(.bottom, 20)
...
